[gd_scene load_steps=5 format=2]

[ext_resource path="res://Util/SexActivityCreator/ActivityActionsList.gd" type="Script" id=1]
[ext_resource path="res://Util/SexActivityCreator/ActivityAcitonItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="ActivityActionsList" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 25.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_top = -1.0
margin_right = 79.4
margin_bottom = 24.4
text = "Some text"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
margin_left = 82.0
margin_right = 1245.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="HBoxContainer"]
margin_left = 1248.0
margin_right = 1280.0
margin_bottom = 25.0
text = "Add"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 100 )
custom_styles/bg = SubResource( 1 )

[node name="ActionList" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActivityAcitonItem" parent="ScrollContainer/ActionList" instance=ExtResource( 2 )]
margin_bottom = 25.0

[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
